--- a/index.html
+++ b/index.html
@@ -18,6 +18,36 @@
         <div class="container">
             <nav class="nav flex">
                 <a href="" class="logo">logo</a>
+                <input type="checkbox" name="hamburg" class="hamburg" id="hamburg">
+                <label for="hamburg" class="hamburg-btn desk-none">
+                    <span class="hamburg-wrap flex">
+                        <span class="lines">&nbsp;</span>
+                    </span>
+                </label>
+                <div class="menu-body w-100 flex">
+                    <ul class="nav-ul flex">
+                        <li class="nav-li">
+                            <a href="#landing" class="navlink">Home</a>
+                        </li>
+                        <li class="nav-li">
+                            <a href="#about" class="navlink">About Us</a>
+                        </li>
+                        <li class="nav-li">
+                            <a href="#services" class="navlink">Services</a>
+                        </li>
+                        <li class="nav-li">
+                            <a href="#contact" class="navlink">Contact</a>
+                        </li>
+                    </ul>
+                    <div class="nav-btn-box">
+                        <!-- <div class="nav-btn">                             -->
+                            <a href="" class="btn nav-btn signin-btn">Sign In</a>
+                        <!-- </div>
+                        <div class="nav-btn">                             -->
+                            <a href="" class="btn nav-btn signup-btn">Sign Up</a>
+                        <!-- </div> -->
+                    </div>
+                </div>
             </nav>
         </div>
     </header>
