--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;0,800;1,400;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./css/general.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
@@ -41,10 +42,10 @@
                     </ul>
                     <div class="nav-btn-box">
                         <!-- <div class="nav-btn">                             -->
-                            <a href="" class="btn nav-btn signin-btn">Sign In</a>
+                        <a href="" class="btn nav-btn signin-btn">Sign In</a>
                         <!-- </div>
                         <div class="nav-btn">                             -->
-                            <a href="" class="btn nav-btn signup-btn">Sign Up</a>
+                        <a href="" class="btn nav-btn signup-btn">Sign Up</a>
                         <!-- </div> -->
                     </div>
                 </div>
@@ -63,6 +64,16 @@
                 </div>
                 <div class="grid flight-grid">
                     <div class="flight-card w-100">
+                        <div class="flex">
+                            <div class="from">
+                                <h3>From</h3>
+                                <p>lala</p>
+                            </div>
+                            <div class="to">
+                                <h3>To</h3>
+                                <p>lala</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="flight-card w-100">
                     </div>
